fixing layout issue basics

--- a/sass/layout/_index.sass
+++ b/sass/layout/_index.sass
@@ -1,73 +1,73 @@
 @import _variables.sass
 @import _mixins.sass
 #wrapper
-  :width 100%
+  width: 100%
   #top-bar
-    :height 80px
-    :margin-bottom 30px
-    :padding-top 10px
+    height: 80px
+    margin-bottom: 30px
+    padding-top: 10px
     &.tabs
-      :height 100px
+      height: 100px
     #top-bar-inner
       +maxWidth
-      :padding 20px 20px 0
+      padding: 20px 20px 0
       //IE6 hack (top padding not being respected)
-      :*margin-top 20px
-      :width 940px
+      *margin-top: 20px
+      width: 940px
       #logo
-        :float left
-        :width 260px
+        float: left
+        width: 260px
       #nav
-        :float right
-        :padding-top 5px
+        float: right
+        padding-top: 5px
         a
-          :margin 0 10px
+          margin: 0 10px
       #tabs
-        :height 30px
-        :margin-top 50px
+        height: 30px
+        margin-top: 50px
         ul
-          :list-style none
-          :margin 0
+          list-style: none
+          margin: 0
         li
-          :float left
-          :display inline
-          :margin-top 3px
+          float: left
+          display: inline
+          margin-top: 3px
           a
-            :display block
+            display: block
         #primary-nav
           ul li
-            :cursor pointer
-            :padding 4px 25px 11px
+            cursor: pointer
+            padding: 4px 25px 11px
         #secondary-nav
-          :float right
-          :margin 2px 10px
+          float: right
+          margin: 2px 10px
           ul li
-            :float left
-            :padding 0 10px
+            float: left
+            padding: 0 10px
         
   #content
     +clearfix
     +maxWidth
     #sidebar
-      :float left
-      :width 300px
-      :margin 0 10px
+      float: left
+      width: 300px
+      margin: 0 10px
     #main
-      :float left
-      :width 620px
-      :margin 0 10px
+      float: left
+      width: 620px
+      margin: 0 10px
   #footer
-    :margin-top 19px
-    :padding 25px 40px
+    margin-top: 19px
+    padding: 25px 40px
     a
-      :margin 0 10px
+      margin: 0 10px
   
 //content elements
 .box
   .top
     padding: 10px
   .content
-    :padding 10px
+    padding: 10px
   
 .actions
-  :padding-top 20px
+  padding-top: 20px
